metatryp link to EC press

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ QmCC" rel="icon" type="image/x-icon" />
 									<h3>Projects</h3>
 									<div class="features">
 										<article>
-											<a href="metatryp.html" class="image"><img src="images/covid.png" alt="" /></a>
+											<a href="https://www.earthcube.org/ocean-protein-portal" class="image"><img src="images/covid.png" alt="" /></a>
 											<div class="inner">
 												<h4>METATRYP</h4>
 												<p>METATRYP is a software package designed to assess the taxonomic specificity of short tryptic peptides used for environmental proteomics analysis. Our latest publication with METATRYP v 2.0 applies the tool for marine microbial community assessment as well as demonstrates applications for COVID-19 identification.</p>
