--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ QmCC" rel="icon" type="image/x-icon" />
 											</div>
 										</article>
 										<article>
-											<a href="https://proteinportal.whoi.edu/" class="image"><img src="images/OPP.png" /></a>
+											<a href="https://proteinportal.whoi.edu/" class="image"><img src="images/OPP.PNG" /></a>
 											<div class="inner">
 												<h4>Ocean Protein Portal</h4>
 												<p>The Ocean Protein Portal is an online visualization platform for users to explore the presence of marine microbial proteins throughout the world's oceans. This tool is an open sharing platform for marine proteomic data facilitating research discovery and education</p>
