Update anchors & add pic

--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@ QmCC" rel="icon" type="image/x-icon" />
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#three">Projects</a></li>
-						<li><a href="#four">CV</a></li>
+						<li><a href="#About" class="active">About</a></li>
+						<li><a href="#Projects">Projects</a></li>
+						<li><a href="#CV">CV</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -271,7 +271,7 @@ QmCC" rel="icon" type="image/x-icon" />
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="About">
 								<div class="image main" data-position="center">
 									<img src="images/banner.jpg" alt="" />
 								</div>
@@ -279,12 +279,14 @@ QmCC" rel="icon" type="image/x-icon" />
 									<header class="major">
 										<h2>About</h2>
 									</header>
-									<p>I'm a Postdoctoral Investigator at the Woods Hole Oceanographic Institution interested in understanding the complex dynamics between marine micoorganisms and global biogeochemical cycles.<br><br>I study how the availability of different chemical elements influences the geographic distribution and evolution of microbial communities, and conversely, how marine microorganisms biochemically transform compounds thereby influencing their global cycling. Most of my work has focused on the toxin Arsenic, as well as the nutrients Phosphorus and Nitrogen.<br><br>I utilize multiple techniques to study these broad interactions between microbes and the marine environment, including genomics, proteomics, bioinformatics, and data science. Please see the <a href="#three">Projects</a> section below for more information about some of my research and data projects.</p>
+										<div class="inner">
+											<p><span class="image left"><img src="images/jaclynsaunders_sm.jpg" width="200" height="300" alt="" /></span>I'm a Postdoctoral Investigator at the Woods Hole Oceanographic Institution interested in understanding the complex dynamics between marine micoorganisms and global biogeochemical cycles.<br><br>I study how the availability of different chemical elements influences the geographic distribution and evolution of microbial communities, and conversely, how marine microorganisms biochemically transform compounds thereby influencing their global cycling. Most of my work has focused on the toxin Arsenic, as well as the nutrients Phosphorus and Nitrogen.<br><br>I utilize multiple techniques to study these broad interactions between microbes and the marine environment, including genomics, proteomics, bioinformatics, and data science. Please see the <a href="#Projects">Projects</a> section below for more information about some of my research and data projects.</p>
+										</div>
 								</div>
 							</section>
 
 						<!-- Three -->
-							<section id="three">
+							<section id="Projects">
 								<div class="container">
 									<h3>Projects</h3>
 									<div class="features">
@@ -326,7 +328,7 @@ QmCC" rel="icon" type="image/x-icon" />
 
 
 						<!-- Four -->
-							<section id="four">
+							<section id="CV">
 								<div class="container">
 									<h2><a href="cv.pdf" target="blank">CV</a></h2>
 								</div>
